# noshow-iq-69722

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  neighbourhood_map.joblib  noshow_model.joblib  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci-cd.yml
noshow_iq/: __init__.py  api.py  loading_dataset.py  model.py  preprocess.py
tests/: test_api.py
